# uncertainty-estimation

./: .gitignore  .python-version  README.md  pyproject.toml
notebooks/: 01_bulldozer_training_simplified.ipynb  01_favorita_training_simplified.ipynb  01_rossmann_training_simplified.ipynb  02_rossmann_training_on_parameters_onlyMQCNNV0.2.ipynb
uncertainty_estimation/: __init__.py  constants.py  uncertainty_estimation_models.py
uncertainty_estimation/notebooks/: 02_favorita_training_on_paper_parameters_mqcnn.ipynb
